Resource and Reservation

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,14 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     
+    <link href="lib/ionic-datepicker/dist/style.css" rel="stylesheet"> 
+	<!-- path to ionic/angularjs js -->
+	<script src="lib/ionic-datepicker/dist/templates.js"></script>
+	<script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
+	
+	<link href="lib/ng-table/dist/ng-table.css" rel="stylesheet">
+	<script src="lib/ng-table/dist/ng-table.js"></script> 
+    
     <!-- your app's js -->
     <script src="js/index.js"></script>
   </head>
