Amendment on date-picker UI UI enhancement Remove location domain

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 	<!-- path to ionic/angularjs -->
-	<script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+	<script src="script/ionic-datepicker.bundle.min.js"></script>
     
     <!-- your app's js -->
     <script src="js/index.js"></script>
